--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>SiAus Green</title>
+  <title>SiAus</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -27,12 +27,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Green - v4.10.0
-  * Template URL: https://bootstrapmade.com/green-free-one-page-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -57,7 +51,7 @@
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center">
        <!-- use an image logo -->
-      <h1 class="logo me-auto"><img src="assets/img/Siaus logo (1).png" alt="logo" class="img-fluid"><a href="index.html">Green</a></h1>
+      <h1 class="logo me-auto"><img src="assets/img/Siaus logo (1).png" alt="logo" class="img-fluid"><a href="index.html" style="padding-left: 10px";>SiAus</a></h1>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -708,7 +702,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Green</h3>
+      <h3></h3>
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -718,15 +712,11 @@
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>Green</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>SiAus</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/green-free-one-page-bootstrap-template/ -->
-        Designed by  SiAus Green
-        <!-- <a  href="#">SiAus Green</a> -->
+               Designed by
+        <a  href="#">SiAus</a>
       </div>
     </div>
   </footer><!-- End Footer -->
