--- a/ImageCal.html
+++ b/ImageCal.html
@@ -1,38 +1,92 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Facebook Photo Upload Checker</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       padding: 20px;
+      box-sizing: border-box;
     }
+
+    h2, h3 {
+      margin-bottom: 15px;
+    }
+
     input[type="text"], input[type="number"] {
-      padding: 5px;
-      margin-right: 10px;
+      padding: 8px;
+      width: 100%;
+      max-width: 200px;
+      box-sizing: border-box;
     }
+
     .flex-row {
       display: flex;
-      align-items: center;
+      flex-wrap: wrap;
       gap: 10px;
-      margin-bottom: 10px;
+      align-items: center;
+      margin-bottom: 15px;
     }
+
     .photo-input {
-      margin-bottom: 5px;
+      flex-direction: column;
+      align-items: flex-start;
     }
+
+    .photo-input input {
+      max-width: 250px;
+    }
+
+    button {
+      padding: 10px 20px;
+      border: none;
+      cursor: pointer;
+      font-weight: bold;
+      border-radius: 4px;
+    }
+
+    #checkPhotos {
+      background-color: green;
+      color: white;
+      margin-top: 10px;
+    }
+
+    .submit-btn {
+      background-color: #007BFF;
+      color: white;
+    }
+
     pre {
       background: #f0f0f0;
       padding: 10px;
       border-radius: 4px;
       white-space: pre-wrap;
     }
-    .error {
-      color: red;
+
+    .footer-submit {
+      margin-top: 20px;
     }
-	#checkPhotos{
-	background-color:green;
-	color:white;
-	}
+
+    @media (max-width: 600px) {
+      input[type="text"], input[type="number"] {
+        width: 100%;
+      }
+
+      button {
+        width: 100%;
+      }
+
+      .flex-row {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      .photo-input label {
+        margin-bottom: 5px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -56,11 +110,10 @@
   <h3>Results:</h3>
   <pre id="output"></pre>
 
+  <div class="footer-submit">
+    <button class="submit-btn" onclick="window.location.href='/'">Back to website</button>
+  </div>
 
-
- <div class="footer-submit">
-  <button class="submit-btn" onclick="window.location.href='/'">Back to website</button>
-</div>
   <script>
     function generateInputs() {
       const n = parseInt(document.getElementById("numPhotos").value);
@@ -95,7 +148,6 @@
         const val = document.getElementById(`photo-${i}`).value.trim();
         const parts = val.split(" ").filter(Boolean);
 
-       
         if (parts.length !== 2 || isNaN(parts[0]) || isNaN(parts[1])) {
           output.textContent += `Photo ${i + 1}: Invalid input! Please enter exactly 2 numbers (W H)\n`;
           continue;
